--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=springstudent
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+
+# Eureka server URL
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
